--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "linkedin.com/in/joy-saha-a60204250"
+  linkedin         : "joy-saha-a60204250"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
