Update bio in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "images/profile.jpg"
   name             : "Saha, Joy"
   pronouns         : "He/Him" 
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "2nd Year ECE PhD Student"
   location         : "Albany, NY"
   employer         : "University  at Albany, SUNY"
   uri              : # URL
