Update URI to point to university website

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   bio              : "2nd Year ECE PhD Student"
   location         : "Albany, NY"
   employer         : "University  at Albany, SUNY"
-  uri              : # URL
+  uri              : "https://www.albany.edu/"
   email            : "jsaha2@albany.edu" 
 
   # Academic websites
