Update CV URL to include .pdf extension

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
 
 main:
   - title: "CV"
-    url: /files/Joy_Saha_Resume
+    url: /files/Joy_Saha_Resume.pdf
 
   - title: "Experience"
     url: /experience/
