Add Education link to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
   - title: "CV"
     url: /files/Joy_Saha_Resume.pdf
 
+ - title: "Education"
+    url: /education
+
   - title: "Experience"
     url: /experience/
 
