--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,15 +10,15 @@
 
 
 main:
-  - title: "CV"
+  - title: CV
     url: /files/Joy_Saha_Resume.pdf
-  - title: "Education"
+  - title: Education
     url: /education/
-  - title: "Experience"
+  - title: Experience
     url: /experience/
-  - title: "Projects"
+  - title: Projects
     url: /projects/
-  - title: "Publications"
+  - title: Publications
     url: /publications/
 
 
