--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "joysaha189/joysaha189.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.jpeg"
   name             : "Joy Saha"
   pronouns         : "He/Him" 
   bio              : "2nd Year ECE PhD Student"
